--- a/apps/blood/src/app/app.component.html
+++ b/apps/blood/src/app/app.component.html
@@ -1,3 +1,7 @@
+<nav>
+  <router-outlet></router-outlet>
+</nav>
+
 <header class="flex">
   <svg width="40" height="40" viewBox="0 0 262 163">
     <polygon
